package CoucheLogique;

public class Clinique extends Etablissement{
}
