package CoucheLogique;

public class Dossier {
    
    Antecedent[] antecedents;
    Visite[] visites;
    Patient patient;
}
