package CoucheLogique;

import java.util.List;

public abstract class Etablissement {

    private Coordonnees coords;
    private List<SalleEvaluation> salles;
}
