package CoucheLogique;

public class Hopital extends Etablissement{
}
