package CoucheLogique;

import java.util.List;

public class SalleEvaluation {

    private List<PosteTravail> postes;
}
