package CoucheLogique;

public interface SystemeDossier {
    
}
