package CoucheLogique;

public abstract class Utilisateur {
}
