package CoucheDePresentation;

import javax.swing.JFrame;

public class ApplicationMedecin extends JFrame{
    ApplicationMedecin(){

        this.setSize(400, 400);
        this.setTitle("Application Medecin");
        this.setVisible(true);
        this.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
    }
}
