package CouchePresentation;


import javax.swing.JButton;
import javax.swing.JFrame;

public abstract class InterfaceUtilisateur extends JFrame{
    
    void connexion(String usrname, String pwd){

    }

}
