@startuml Classes

title Classes

class SystemeDossier{
    creerDossier()
    lireDossier()
    modifierDossier()
    modifierCoordonnees()
    reconstruireDossier()


}

class ConnecteurDB{
    ecrireBaseDonnees()
    lireBaseDonnees()
}

ConnecteurDB -- SystemeDossier

class SiteWeb{

}


Utilisateur *-- Identifiants



class ApplicationMedecin{

}

class ApplicationMobile{

}

abstract InterfaceUtilisateur{
    connexion()
}

ApplicationMedecin --|> InterfaceUtilisateur
ApplicationMobile --|> InterfaceUtilisateur
SiteWeb --|> InterfaceUtilisateur

InterfaceUtilisateur .. SystemeDossier


class Dossier{
    - code: String
    - Patient: infoPatient
    - dateVersion
}

interface Lisible{}
interface Modifiable{}

Dossier ..|> Lisible
Dossier ..|> Modifiable

class Antecedent{
    - diagnostic: String
    - traitement: String
    - medecin: Medecin
    - debut: Optional<Date>
    - fin: Optional<Date>
}

Antecedent ..|> Lisible
Antecedent ..|> Modifiable

class Visite{
    - medecin: Medecin
    - date: String
    - diagnostic: Optional<String>
    - traitement: Optional<String>
    - resume: String
    - notes: String
}

Visite ..|> Lisible
Visite ..|> Modifiable

class Medecin{
    modifierDossier()

}

class Coordonnees{
    -adresse:String
    -telephone:String
    -courriel:String
}

Coordonnees ..|> Lisible
Coordonnees ..|> Modifiable

class professionnelMedical{
    -nom:String
    -coordonnees:Coordonnees
}

class Patient{
    -nom:String
    -prenom:String
    -dateNaissance:String
    -genre:String
    -mere:String
    -pere:String
    -villeNaissance:String
    -numeroAssuranceMaladie:String
    modifierCoordonnees()
    lireDossier()
}

class RAMQ{}

RAMQ *-- EmployeRAMQ

class EmployeRAMQ{
    creerDossier()
    reconstruireDossier()
}

class SalleEvaluation{}
class PosteDeTravail{}


abstract Utilisateur{
    lireDossier()
}

class Hopital{}
class Clinique{}

abstract Etablissement{
    - nom: String
}

Patient --|> Utilisateur
professionnelMedical --|> Utilisateur

Utilisateur .. InterfaceUtilisateur


Hopital --|> Etablissement
Clinique --|> Etablissement
EmployeRAMQ --|> Utilisateur
Etablissement "1" *-- "1" Coordonnees
Etablissement "1" *-- "0..*" SalleEvaluation
SalleEvaluation "1" *-- "1..*" PosteDeTravail
Patient "1" o-- "0..1" Coordonnees
Medecin --|> professionnelMedical
professionnelMedical "0..*" --o "1" PosteDeTravail
SystemeDossier "1" o-- "0..*" Dossier

Patient "1" o-- "0..1" Dossier

Dossier "1" o-- "0..*" Antecedent

Dossier "1" o-- "0..*" Visite

Etablissement "1" -- "*" Visite

@enduml

